# src/routes/admin/logistics.ts
@@ -6,7 +6,8 @@ import {
   getByCountryValidator,
   createEmptyCountryValidator,
   deleteCountryValidator,
-  updateCountryNameValidator,
+  updateConfigIdValidator,
+  updateConfigPartialValidator,
 } from '@/validators/admin/logistics';
 import { validate } from '@/middleware/validate';
 
@@ -15,11 +16,18 @@ const router = Router();
 router.use(authenticateUser, isAdmin);
 
 router.get('/countries', AdminLogisticsController.listCountries);
-router.get('/:countryCode', getByCountryValidator, validate, AdminLogisticsController.getByCountry);
-router.put('/', upsertConfigValidator, validate, AdminLogisticsController.upsertConfig); // can crud any ciry, lga , state
+router.get('/one/:country', getByCountryValidator, validate, AdminLogisticsController.getByCountry);
+// Create full logistics config and update by ID
+router.post('/config', upsertConfigValidator, validate, AdminLogisticsController.createConfig);
+router.patch(
+  '/config/:id',
+  updateConfigIdValidator,
+  updateConfigPartialValidator,
+  validate,
+  AdminLogisticsController.updateConfig
+);
 // routes to create an empty country, delete a country and update a country name
-router.post('/', createEmptyCountryValidator, validate, AdminLogisticsController.createEmptyCountry);
-router.delete('/:countryCode', deleteCountryValidator, validate, AdminLogisticsController.deleteCountry);
-router.patch('/:countryCode', updateCountryNameValidator, validate, AdminLogisticsController.updateCountryName);
+router.post('/country/add', createEmptyCountryValidator, validate, AdminLogisticsController.createEmptyCountry);
+router.delete('/country/:id', deleteCountryValidator, validate, AdminLogisticsController.deleteCountry);
 
 export default router;
